# snektris

./: BaseEvent.hpp  BaseStateMachine.hpp  BaseTetrisBlock.hpp  BlockEventsCreation.cpp  CMakeLists.txt  ColorManager.cpp  ColorManager.h  DeathStateMachine.hpp  Event.h  Event.hpp  EventManager.hpp  FallingBlock.cpp  FallingBlock.h  FancyText.cpp  FancyText.hpp  GameDrawingFunctions.cpp  GameStateMachine.cpp  GameStateMachine.hpp  GameStatistic.h  GameTimer.h  GameUtilFunctions.cpp  GameWindow.cpp  GameWindow.h  GetRandomNumber.h  HelpMenu.hpp  HighScoreManager.cpp  HighScoreManager.h  HighScoreStateMachine.hpp  HorizontalBlock.hpp  KeyEventsCreation.cpp  MainMenu.h  Map.cpp  Map.h  MapEvent.hpp  Matrix.hpp  MovebaleObject.h  README.md  Resource.aps  SimpleEvent.hpp  Snake.h  (+13 more)
